subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_7.while
int f(int x) {
    for(int i=0; i < x; i=y+1) {
        x = x + 1;
    }
    return x;
}
